@@ -2,6 +2,12 @@ Revision history for CPANPLUS-Dist-Fedora
 
 ( CPANPLUS-Dist-Mdv changes below. )
 
+ - Changed the Readonly variables that contained command-line 
+ invocations of "rpm" (that got invoked when loading the module) to a
+ memoized method that gets called at run time.
+    - Fixes the build errors reported in:
+        - http://nntp.x.perl.org/group/perl.cpan.testers/2202219
+ 
 0.0.2 TODO: FILL IN.
  - Applied a modified version of Chris Weyl's patch to 
  lib/CPANPLUS/Dist/Fedora.pm :
